Fixed some styles of ServicesSkeleton for too small media.

--- a/src/components/Skeleton/ServicesSkeleton/styles.module.css
+++ b/src/components/Skeleton/ServicesSkeleton/styles.module.css
@@ -135,7 +135,7 @@
   }
 }
 
-@media screen and (min-width: 300px) {
+@media screen and (min-width: 307px) {
   .outerList {
     margin-bottom: 23.96px;
   }
